# app_savemoney

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  TEST_REPORT.md  ZEABUR_MANUAL_SETUP.md  dev.sh  dev_gradio.sh  dev_gradio_enhanced.sh  gradio_app.py  gradio_app_enhanced.py  langgraph_workflow.excalidraw  requirements.txt  stop.sh  system_architecture.excalidraw  test-deployment.sh  test.sh  test_full_workflow.py  test_real_workflow.py  test_stt.py  test_stt_env.py  test_stt_improved.py  test_stt_wav.py  zeabur-simple.json  zeabur.json
backend/: Dockerfile  minimal_app.py  pyproject.toml  requirements.txt  start_debug.py  test_confirmation.py  test_e2e.py  test_feishu_basic.py  test_feishu_debug.py  test_feishu_detailed.py  test_feishu_integration.py  test_feishu_knowledge_space.py  test_feishu_permissions.py  test_feishu_table_access.py  test_feishu_table_structure.py  test_feishu_verify.py  test_frontend_integration.py  test_frontend_ui.py  test_langgraph.py  test_real_workflow.py  test_stt_improved.py  test_stt_wav.py  test_time_parsing.py  zeabur.json
backend/app/: main.py
backend/app/api/: routes.py
backend/app/services/: feishu_api.py  gpt_parser.py  langgraph_workflow.py  nlp.py  stt.py
data/: test.m4a
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  test_audio.txt  vite.config.ts  zeabur-docker.json  zeabur-static.json  zeabur.json  zeabur_nginx_config.conf
frontend/src/: App.vue  main.ts
frontend/src/components/: AudioRecorder.vue  ExpenseDisplay.vue
(+2 files in other folders)
